Commit al master del blog en su versión más reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body> 
-    <h1>Esto es un blog post</h1>
-    <p>Parraro de inicio</p>
+    <div id="container">
+    <div id="post">
+    <h1>Titulo interesante para el blog</h1>
+    <p>Parrafo donde explicrameos cosas increibles</p>
+        </div>
+    </div>
 </body>
 </html>
