--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,9 @@
 </head>
 <body> 
     <div id="container">
+        <div id="cabecera">
+            cabecera
+        </div>
     <div id="post">
     <h1>Titulo interesante para el blog</h1>
     <p>Parrafo donde explicrameos cosas increibles</p>
