agregando el contenido adicional del blog junto con la tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,12 @@
     <div id="post">
     <h1>Titulo interesante para el blog</h1>
     <p>Parrafo donde explicrameos cosas increibles</p>
+    <p> Una gran manera de compartir 
+        información e ideas es por medio de un 
+        blog unete...</p>
+    <p>Estoy inciando en el desarrollo de software y 
+        me emociona la idea de afrontar nuevos 
+        retos dentro de esta fasinante industria</p>
         </div>
     </div>
 </body>
