arreglando la ortografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,7 @@
         blog unete...</p>
     <p>Estoy inciando en el desarrollo de software y 
         me emociona la idea de afrontar nuevos 
-        retos dentro de esta fasinante industria</p>
+        retos dentro de esta fascinante industria</p>
         </div>
     </div>
 </body>
