--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 <body> 
     <div id="container">
         <div id="cabecera">
-            Blog_Santiago <span id="tagline">Tu blog de confianza</span>
+            Blog_Santiago <span id="tagline">Tu blog maestro</span>
         </div>
     <div id="post">
     <h1>Titulo interesante para el blog</h1>
@@ -19,6 +19,7 @@
     <p>Estoy inciando en el desarrollo de software y 
         me emociona la idea de afrontar nuevos 
         retos dentro de esta fascinante industria</p>
+        <p>Suscribete y dale like</p>
         </div>
     </div>
 </body>
