--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
 <html lang=”en”>
 <head>
     <meta charset=”UTF-8″ />
-    <title>Blog bonito</title>
+    <title>Blog bonito 2.0</title>
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body> 
