--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
     <p> Una gran manera de compartir 
         información e ideas es por medio de un 
         blog unete...</p>
+    <p><a href="https://i.imgur.com/repy541"><img src="https://i.imgur.com/repy541.png" width="100%" title="Team Platzi" /></a></p>
     <p>Estoy inciando en el desarrollo de software y 
         me emociona la idea de afrontar nuevos 
         retos dentro de esta fascinante industria</p>
