--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 <body> 
     <div id="container">
         <div id="cabecera">
-            Blog_Santiago <span id="tagline">Tu blog de cabecera</span>
+            Blog_Santiago <span id="tagline">Tu blog de confianza</span>
         </div>
     <div id="post">
     <h1>Titulo interesante para el blog</h1>
@@ -22,6 +22,7 @@
         retos dentro de esta fascinante industria</p>
         <p>Suscribete y dale like</p>
         </div>
+        <div id="footer">Hecho con amor en Platzi</div>
     </div>
 </body>
 </html>
